@@ -30,27 +30,24 @@ package org.hisp.dhis.analytics.table;
 import static java.lang.String.join;
 import static java.util.Collections.emptyList;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 import static org.hisp.dhis.analytics.AnalyticsTableType.TRACKED_ENTITY_INSTANCE;
-import static org.hisp.dhis.analytics.ColumnDataType.BOOLEAN;
-import static org.hisp.dhis.analytics.ColumnDataType.CHARACTER_11;
-import static org.hisp.dhis.analytics.ColumnDataType.DOUBLE;
-import static org.hisp.dhis.analytics.ColumnDataType.GEOMETRY;
-import static org.hisp.dhis.analytics.ColumnDataType.INTEGER;
-import static org.hisp.dhis.analytics.ColumnDataType.TEXT;
-import static org.hisp.dhis.analytics.ColumnDataType.TIMESTAMP;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_1200;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_255;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_50;
-import static org.hisp.dhis.analytics.ColumnNotNullConstraint.NOT_NULL;
-import static org.hisp.dhis.analytics.ColumnNotNullConstraint.NULL;
-import static org.hisp.dhis.analytics.IndexType.GIST;
 import static org.hisp.dhis.analytics.table.JdbcEventAnalyticsTableManager.EXPORTABLE_EVENT_STATUSES;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.BOOLEAN;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.CHARACTER_11;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.DOUBLE;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.GEOMETRY;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.INTEGER;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.TEXT;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.TIMESTAMP;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.VARCHAR_255;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.VARCHAR_50;
 import static org.hisp.dhis.analytics.util.AnalyticsSqlUtils.quote;
+import static org.hisp.dhis.analytics.util.AnalyticsUtils.getColumnType;
 import static org.hisp.dhis.analytics.util.DisplayNameUtils.getDisplayName;
 import static org.hisp.dhis.commons.util.TextUtils.removeLastComma;
+import static org.hisp.dhis.db.model.constraint.Nullable.NOT_NULL;
+import static org.hisp.dhis.db.model.constraint.Nullable.NULL;
 import static org.hisp.dhis.util.DateUtils.getLongDateString;
-import static org.springframework.util.Assert.notNull;
 
 import java.util.ArrayList;
 import java.util.Date;
@@ -59,17 +56,19 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Stream;
 import org.apache.commons.collections4.CollectionUtils;
-import org.hisp.dhis.analytics.AnalyticsTable;
-import org.hisp.dhis.analytics.AnalyticsTableColumn;
 import org.hisp.dhis.analytics.AnalyticsTableHookService;
-import org.hisp.dhis.analytics.AnalyticsTablePartition;
 import org.hisp.dhis.analytics.AnalyticsTableType;
 import org.hisp.dhis.analytics.AnalyticsTableUpdateParams;
 import org.hisp.dhis.analytics.partition.PartitionManager;
+import org.hisp.dhis.analytics.table.model.AnalyticsTable;
+import org.hisp.dhis.analytics.table.model.AnalyticsTableColumn;
+import org.hisp.dhis.analytics.table.model.AnalyticsTablePartition;
+import org.hisp.dhis.analytics.table.model.IndexType;
 import org.hisp.dhis.analytics.table.setting.AnalyticsTableExportSettings;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.dataapproval.DataApprovalLevelService;
+import org.hisp.dhis.db.model.Logged;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
 import org.hisp.dhis.period.PeriodDataProvider;
 import org.hisp.dhis.program.Program;
@@ -95,43 +94,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
 
   private final TrackedEntityAttributeService trackedEntityAttributeService;
 
-  public JdbcTeiAnalyticsTableManager(
-      IdentifiableObjectManager idObjectManager,
-      OrganisationUnitService organisationUnitService,
-      CategoryService categoryService,
-      SystemSettingManager systemSettingManager,
-      DataApprovalLevelService dataApprovalLevelService,
-      ResourceTableService resourceTableService,
-      AnalyticsTableHookService tableHookService,
-      PartitionManager partitionManager,
-      DatabaseInfoProvider databaseInfoProvider,
-      @Qualifier("analyticsJdbcTemplate") JdbcTemplate jdbcTemplate,
-      TrackedEntityTypeService trackedEntityTypeService,
-      TrackedEntityAttributeService trackedEntityAttributeService,
-      AnalyticsTableExportSettings settings,
-      PeriodDataProvider periodDataProvider) {
-    super(
-        idObjectManager,
-        organisationUnitService,
-        categoryService,
-        systemSettingManager,
-        dataApprovalLevelService,
-        resourceTableService,
-        tableHookService,
-        partitionManager,
-        databaseInfoProvider,
-        jdbcTemplate,
-        settings,
-        periodDataProvider);
-
-    notNull(trackedEntityAttributeService, "trackedEntityAttributeService cannot be null");
-    this.trackedEntityAttributeService = trackedEntityAttributeService;
-
-    notNull(trackedEntityTypeService, "trackedEntityTypeService cannot be null");
-    this.trackedEntityTypeService = trackedEntityTypeService;
-  }
-
-  private static final List<AnalyticsTableColumn> GROUP_BY_COLS =
+  private static final List<AnalyticsTableColumn> FIXED_GROUP_BY_COLS =
       List.of(
           new AnalyticsTableColumn(
               quote("trackedentityid"), INTEGER, NOT_NULL, "tei.trackedentityid"),
@@ -144,7 +107,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
           new AnalyticsTableColumn(
               quote("lastupdatedatclient"), TIMESTAMP, "tei.lastupdatedatclient"),
           new AnalyticsTableColumn(quote("lastsynchronized"), TIMESTAMP, "tei.lastsynchronized"),
-          new AnalyticsTableColumn(quote("geometry"), GEOMETRY, "tei.geometry").withIndexType(GIST),
+          new AnalyticsTableColumn(quote("geometry"), GEOMETRY, "tei.geometry", IndexType.GIST),
           new AnalyticsTableColumn(
               quote("longitude"),
               DOUBLE,
@@ -167,7 +130,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
           new AnalyticsTableColumn(quote("oucode"), VARCHAR_50, NULL, "ou.code"),
           new AnalyticsTableColumn(quote("oulevel"), INTEGER, NULL, "ous.level"));
 
-  private static final List<AnalyticsTableColumn> NON_GROUP_BY_COLS =
+  private static final List<AnalyticsTableColumn> FIXED_NON_GROUP_BY_COLS =
       List.of(
           new AnalyticsTableColumn(
               quote("createdbyusername"),
@@ -202,6 +165,38 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
               VARCHAR_255,
               getDisplayName("lastupdatedbyuserinfo", "tei", "lastupdatedbydisplayname")));
 
+  public JdbcTeiAnalyticsTableManager(
+      IdentifiableObjectManager idObjectManager,
+      OrganisationUnitService organisationUnitService,
+      CategoryService categoryService,
+      SystemSettingManager systemSettingManager,
+      DataApprovalLevelService dataApprovalLevelService,
+      ResourceTableService resourceTableService,
+      AnalyticsTableHookService tableHookService,
+      PartitionManager partitionManager,
+      DatabaseInfoProvider databaseInfoProvider,
+      @Qualifier("analyticsJdbcTemplate") JdbcTemplate jdbcTemplate,
+      TrackedEntityTypeService trackedEntityTypeService,
+      TrackedEntityAttributeService trackedEntityAttributeService,
+      AnalyticsTableExportSettings settings,
+      PeriodDataProvider periodDataProvider) {
+    super(
+        idObjectManager,
+        organisationUnitService,
+        categoryService,
+        systemSettingManager,
+        dataApprovalLevelService,
+        resourceTableService,
+        tableHookService,
+        partitionManager,
+        databaseInfoProvider,
+        jdbcTemplate,
+        settings,
+        periodDataProvider);
+    this.trackedEntityAttributeService = trackedEntityAttributeService;
+    this.trackedEntityTypeService = trackedEntityTypeService;
+  }
+
   /**
    * Returns the {@link AnalyticsTableType} of analytics table which this manager handles.
    *
@@ -225,11 +220,12 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
 
     params.addExtraParam("", PROGRAMS_BY_TET_KEY, programsByTetUid);
 
+    Logged logged = analyticsExportSettings.getTableLogged();
+
     return trackedEntityTypeService.getAllTrackedEntityType().stream()
         .map(
             tet ->
-                new AnalyticsTable(
-                    getAnalyticsTableType(), getTableColumns(params, tet), emptyList(), tet))
+                new AnalyticsTable(getAnalyticsTableType(), getColumns(params, tet), logged, tet))
         .toList();
   }
 
@@ -247,7 +243,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
   }
 
   @SuppressWarnings("unchecked")
-  private List<AnalyticsTableColumn> getTableColumns(
+  private List<AnalyticsTableColumn> getColumns(
       AnalyticsTableUpdateParams params, TrackedEntityType tet) {
     Map<String, List<Program>> programsByTetUid =
         (Map<String, List<Program>>) params.getExtraParam("", PROGRAMS_BY_TET_KEY);
@@ -284,8 +280,10 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
             .map(
                 tea ->
                     new AnalyticsTableColumn(
-                        quote(tea.getUid()), VARCHAR_1200, "\"" + tea.getUid() + "\".value"))
-            .collect(toList()));
+                        quote(tea.getUid()),
+                        getColumnType(tea.getValueType(), isSpatialSupport()),
+                        getSelectClause(tea.getValueType(), "\"" + tea.getUid() + "\".value")))
+            .toList());
 
     return columns;
   }
@@ -321,11 +319,10 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
    *
    * @return a List of {@link AnalyticsTableColumn}.
    */
-  @Override
-  public List<AnalyticsTableColumn> getFixedColumns() {
-    List<AnalyticsTableColumn> allFixedColumns = new ArrayList<>(GROUP_BY_COLS);
+  private List<AnalyticsTableColumn> getFixedColumns() {
+    List<AnalyticsTableColumn> allFixedColumns = new ArrayList<>(FIXED_GROUP_BY_COLS);
     allFixedColumns.add(getOrganisationUnitNameHierarchyColumn());
-    allFixedColumns.addAll(NON_GROUP_BY_COLS);
+    allFixedColumns.addAll(FIXED_NON_GROUP_BY_COLS);
 
     return allFixedColumns;
   }
@@ -350,10 +347,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
   @SuppressWarnings("unchecked")
   protected void populateTable(
       AnalyticsTableUpdateParams params, AnalyticsTablePartition partition) {
-    List<AnalyticsTableColumn> dimensions = partition.getMasterTable().getDimensionColumns();
     List<AnalyticsTableColumn> columns = partition.getMasterTable().getColumns();
-
-    validateDimensionColumns(dimensions);
 
     StringBuilder sql = new StringBuilder("insert into " + partition.getTempTableName() + " (");
 
@@ -363,8 +357,8 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
 
     removeLastComma(sql).append(") select ");
 
-    for (AnalyticsTableColumn col : dimensions) {
-      sql.append(col.getAlias() + ",");
+    for (AnalyticsTableColumn col : columns) {
+      sql.append(col.getSelectExpression() + ",");
     }
 
     TrackedEntityType trackedEntityType = partition.getMasterTable().getTrackedEntityType();
